<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_b"
        android:text="@string/app_name"
        android:textColor="@color/app_name"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15sp">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_reg"
                android:paddingBottom="10dp"
                android:text="@string/card_title"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_client1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/layout_client2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_title">

                <ImageView
                    android:layout_width="87dp"
                    android:layout_height="84dp"
                    android:contentDescription="@string/mask"
                    android:src="@drawable/protection_mask_100px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_reg"
                    android:text="@string/mask"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_client2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toEndOf="@+id/layout_client1"
                app:layout_constraintTop_toBottomOf="@id/card_title">

                <ImageView
                    android:layout_width="89dp"
                    android:layout_height="81dp"
                    android:contentDescription="@string/social_distance"
                    android:src="@drawable/distance_100px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4sp"
                    android:fontFamily="@font/noto_reg"
                    android:text="@string/social_distance"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_client2"
                app:layout_constraintTop_toBottomOf="@id/card_title">

                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="81dp"
                    android:contentDescription="@string/wash_hand"
                    android:src="@drawable/hand_wash_100px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4sp"
                    android:fontFamily="@font/noto_reg"
                    android:text="@string/wash_hand"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/line"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_client2" />

            <Button
                android:id="@+id/apply_now"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/home_button_background2"
                android:drawableEnd="@drawable/check_100px"
                android:fontFamily="@font/noto_b"
                android:text="@string/apply_now"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:onClick="onApplyNowClick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <Button
                android:id="@+id/vaccine_info"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/home_button_background1"
                android:drawableEnd="@drawable/info_100px"
                android:fontFamily="@font/noto_b"
                android:onClick="showInfo"
                android:text="@string/vaccine_info"
                android:textAllCaps="false"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply_now" />

            <Button
                android:id="@+id/vaccine_available"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/home_button_background2"
                android:drawableEnd="@drawable/syringe_100px"
                android:fontFamily="@font/noto_b"
                android:onClick="showVaccine"
                android:text="@string/vaccine_available"
                android:textAllCaps="false"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vaccine_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>